# fastar

./: Cargo.toml  README.md  fastar.pyi  pyproject.toml
.github/workflows/: CI.yml
src/: errors.rs  lib.rs  reader.rs  writer.rs
tests/: conftest.py  test_archive_reader.py  test_archive_writer.py  test_module.py
