[project]
name = "fastar"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "maturin>=1.9.6",
    "mypy>=1.14.1",
    "psutil>=7.1.2",
    "pytest>=8.3.5",
    "ruff>=0.14.2",
    "types-psutil>=6.1.0.20241221",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.mypy]
check_untyped_defs = true
